Fixed black checklist items in dark mode

--- a/src/app/tabs/tab_checklist/tab_checklist.page.scss
+++ b/src/app/tabs/tab_checklist/tab_checklist.page.scss
@@ -78,7 +78,7 @@ ion-label {
 
   h3 {
     position: relative;
-    color: black;
+    color: var(--ion-text-color, black);;
     font-size: 1rem;
     font-weight: normal;
     margin-top: 0;
